--- a/neos-normalize.css
+++ b/neos-normalize.css
@@ -1,4 +1,4 @@
-/*! Neo's Normalize v1.0.13 : Neo (@Neos21) http://neo.s21.xrea.com/ */
+/*! Neo's Normalize http://neo.s21.xrea.com/ */
 
 
 /* ==================================================
@@ -9,11 +9,11 @@
 :root {
   --nn-grey-bg: #f2f4f6;
   --nn-grey-border: #d2d4d6;
-  --nn-green-bg: #ddffee;
-  --nn-green-border: #00ddaa;
-  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --nn-serif: Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --nn-monospace: MeiryoKe_Gothic, "Ricty Diminished", Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-green-bg: #dfe;
+  --nn-green-border: #0da;
+  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-serif: Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-monospace: MeiryoKe_Gothic, Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* 全ての要素のボックスサイズの計算方法を border-box にする */
@@ -25,8 +25,7 @@
 
 /* ページ全体のスタイルを設定する */
 html {
-  /* var(--nn-sans-serif) */
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   /* 常に縦スクロールバーを表示する */
   overflow-y: scroll;
   cursor: default;
@@ -60,11 +59,14 @@ details, main {
  * ================================================== */
 
 /* 上下のマージンを設定する */
-h1, h2, h3, h4, h5, h6, p, hr,
-dl, dt, dd, ol, ul,
-address, details, figcaption, fieldset, form, pre, summary, table {
-  margin-top: 0;
-  margin-bottom: 1rem;
+h1, h2, h3, h4, h5, h6, p, hr, dl, dt, dd, ol, ul,
+address, details, blockquote, figure, figcaption, fieldset, form, pre, summary, table {
+  margin: 0 0 1rem;
+}
+
+/* 左マージンを追加する */
+dd, li, blockquote, figure {
+  margin-left: 2.5em;
 }
 
 /* 下マージンをなくす : 入れ子のリスト・子要素のマージンと親要素のパディングとの衝突回避 */
@@ -74,16 +76,6 @@ blockquote > :last-child,
 fieldset > :last-child,
 pre > :last-child {
   margin-bottom: 0;
-}
-
-/* 左マージンを付ける */
-dd, li {
-  margin-left: 2.5em;
-}
-
-/* 引用ブロック・図表はまとめて調整する */
-blockquote, figure {
-  margin: 0 0 1rem 2.5em;
 }
 
 /* リストの左パディングをなくす */
@@ -113,7 +105,9 @@ h4 {
   font-size: 1.2em;
 }
 
-h5, h6 {
+/* 見出し5・6は通常サイズ・等幅フォントの要素は IE でフォントサイズが小さくなるのを直す */
+h5, h6,
+code, kbd, samp, var {
   font-size: 1em;
 }
 
@@ -129,13 +123,7 @@ address, dfn, em, var {
 
 /* 等幅フォントにする */
 pre, code, kbd, samp, var, textarea {
-  /* var(--nn-monospace) */
-  font-family: MeiryoKe_Gothic, "Ricty Diminished", Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-/* IE でフォントサイズが小さくなるのを直す */
-code, kbd, samp, var {
-  font-size: 1em;
+  font-family: MeiryoKe_Gothic, Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 /* フォーム部品のフォントは親要素から継承させる */
@@ -179,21 +167,17 @@ sup {
 
 /* 引用ブロック */
 blockquote {
-  /* var(--nn-green-border) */
-  border: 1px solid #00ddaa;
+  border: 1px solid #0da;
   border-radius: 4px;
   padding: 1em;
-  /* var(--nn-green-bg) */
-  background: #ddffee;
+  background: #dfe;
 }
 
 /* 等幅ブロック */
 pre {
-  /* var(--nn-grey-border) */
   border: 1px solid #d2d4d6;
   border-radius: 4px;
   padding: 1em;
-  /* var(--nn-grey-bg) */
   background: #f2f4f6;
   overflow: auto;
   overflow-wrap: normal;
@@ -210,7 +194,6 @@ table {
 
 /* テーブルセル */
 td, th {
-  /* var(--nn-grey-border) */
   border: 1px solid #d2d4d6;
   padding: .25em .5em;
 }
@@ -218,27 +201,23 @@ td, th {
 /* テーブル見出し */
 th {
   text-align: center;
-  /* var(--nn-grey-bg) */
   background: #f2f4f6;
 }
 
 /* 水平線 */
 hr {
   border: 0;
-  /* var(--nn-grey-border) */
   border-bottom: 1px solid #d2d4d6;
 }
 
 /* フォームグループ */
 fieldset {
-  /* var(--nn-grey-border) */
   border: 1px solid #d2d4d6;
   border-radius: 4px;
 }
 
 /* 図表 */
 figure {
-  /* var(--nn-grey-border) */
   border-left: .5em solid #d2d4d6;
   padding-left: 1em;
 }
@@ -262,11 +241,9 @@ abbr[title], dfn[title] {
 :not(pre) > kbd,
 :not(pre) > var {
   margin: 0 .25em;
-  /* var(--nn-grey-border) */
   border: 1px solid #d2d4d6;
   border-radius: 4px;
   padding: .1em .25em;
-  /* var(--nn-grey-bg) */
   background: #f2f4f6;
 }
 
