--- a/neos-normalize.scss
+++ b/neos-normalize.scss
@@ -13,14 +13,14 @@ $nn-green-border: #0da !default;
 //  1. 英字   … Mac     iOS         … -apple-system, BlinkMacSystemFont,
 //  2. 英字   … Mac     iOS         … "Helvetica Neue",
 //  3. 英字   … Mac Win iOS Android … Helvetica, (= Arial on Windows, Roboto on Android)
-//  4. 和英   … Mac                 … YuGothic,
+//  4. 和英   … Mac Win             … YuGothic, "Yu Gothic", (With @font-face)
 //  5. 和英   … Mac     iOS         … "Hiragino Sans", "Hiragino Kaku Gothic ProN",
 //  6. 和英   …     Win             … Meiryo,
 //  7. 全般   …                     … sans-serif,
 //  8. 絵文字 … Mac     iOS         … "Apple Color Emoji",
 //  9. 絵文字 …     Win             … "Segoe UI Emoji", "Segoe UI Symbol",
 // 10. 絵文字 …             Android … "Noto Color Emoji"
-$nn-sans-serif  : -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$nn-sans-serif  : -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 // セリフ (明朝体)
 //  1. 英字   … Mac Win iOS Android … Georgia, (= Noto Serif on Android)
 //  2. 和英   … Mac Win             … YuMincho, "Yu Mincho",
@@ -41,10 +41,22 @@ $nn-monospace   : MeiryoKe_Gothic, Osaka-mono, "MS Gothic", "Courier New", monos
  * ページ全体
  * ================================================== */
 
+/* Yu Gothic Medium : Windows Full Name → Windows PostScript Name */
+@font-face {
+  font-family: "Yu Gothic";
+  src: local("Yu Gothic Medium"), local("YuGothic-Medium");
+}
+
+@font-face {
+  font-family: "Yu Gothic";
+  src: local("Yu Gothic Bold"), local("YuGothic-Bold");
+  font-weight: bold;
+}
+
 /* 変数定義 */
 :root {
   // SCSS 変数と同じ値にする
-  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --nn-serif: Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --nn-monospace: MeiryoKe_Gothic, Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
