--- a/neos-normalize.css
+++ b/neos-normalize.css
@@ -1,11 +1,35 @@
 /*! Neo's Normalize http://neo.s21.xrea.com/ */
 
+/*
+- サンセリフ (ゴシック体)
+     1. 英字   … Mac     iOS         … -apple-system, BlinkMacSystemFont,
+     2. 英字   … Mac     iOS         … "Helvetica Neue",
+     3. 英字   … Mac Win iOS Android … Helvetica, (= Arial on Windows, Roboto on Android)
+     4. 和英   … Mac Win             … YuGothic, "Yu Gothic", (With @font-face)
+     5. 和英   … Mac Win     [Linux] … "Noto Sans JP", "Noto Sans CJK JP",
+     6. 和英   … Mac     iOS         … "Hiragino Sans", "Hiragino Kaku Gothic ProN",
+     7. 和英   …     Win             … Meiryo,
+     8. 全般   …                     … sans-serif,
+     9. 絵文字 … Mac     iOS         … "Apple Color Emoji",
+    10. 絵文字 …     Win             … "Segoe UI Emoji", "Segoe UI Symbol",
+    11. 絵文字 …             Android … "Noto Color Emoji"
+- セリフ (明朝体)
+     1. 英字   … Mac Win iOS Android … Georgia, (= Noto Serif on Android)
+     2. 和英   … Mac Win             … YuMincho, "Yu Mincho",
+     3. 和英   … Mac Win     [Linux] … "Noto Serif JP", "Noto Serif CJK JP", 
+     4. 和英   … Mac     iOS         … "Hiragino Mincho ProN",
+     5. 和英   …     Win             … "HGS明朝E",
+     6. 全般   …                     … serif
+- モノスペース (等幅)
+     1. 和英   …     Win       [Mod] … MeiryoKe_Gothic,
+     2. 和英   … Mac Win     [Linux] … "Noto Sans CJK JP",
+     3. 和英   … Mac                 … Osaka-mono,
+     4. 和英   …     Win             … "MS Gothic",
+     5. 英字   … Mac Win iOS Android … "Courier New",
+     6. 全般   …                     … monospace
+ */
 
-/* ==================================================
- * ページ全体
- * ================================================== */
-
-/* Yu Gothic Medium : Windows Full Name → Windows PostScript Name */
+/* Yu Gothic : Windows Full Name → Windows PostScript Name */
 @font-face {
   font-family: "Yu Gothic";
   src: local("Yu Gothic Medium"), local("YuGothic-Medium");
@@ -17,245 +41,237 @@
   font-weight: bold;
 }
 
-/* 変数定義 */
 :root {
-  --nn-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --nn-serif: Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --nn-monospace: MeiryoKe_Gothic, Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	--nn-ratio-1: 1.3;
+	--nn-ratio-2: calc(var(--nn-ratio-1) * var(--nn-ratio-1));
+	--nn-ratio-4: calc(var(--nn-ratio-2) * var(--nn-ratio-2));
+	--nn-ratio-8: calc(var(--nn-ratio-4) * var(--nn-ratio-4));
+  
+  --nn-space-default: calc(1rem * var(--nn-ratio-2));
+  --nn-space-small  : calc(var(--nn-space-default) / var(--nn-ratio-2));
+  --nn-space-large  : calc(var(--nn-space-default) * var(--nn-ratio-4));
+  --nn-space-tiny   : calc(var(--nn-space-small) / var(--nn-ratio-2));
+  --nn-space-huge   : calc(var(--nn-space-large) * var(--nn-ratio-4));
+  
+  --nn-space-indent-default: calc(2rem * var(--nn-ratio-1));
+  
+  --nn-font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Noto Sans JP", "Noto Sans CJK JP", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-font-family-monospace: MeiryoKe_Gothic, "Noto Sans Mono CJK JP", Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --nn-font-family-serif: Georgia, YuMincho, "Yu Mincho", "Noto Serif JP", "Noto Serif CJK JP", "Hiragino Mincho ProN", "HGS明朝E", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  
+  --nn-border-radius-default: 4px;
+  
+  --nn-colour-base         : #323436;
+  --nn-colour-background   : #fdfeff;
+  --nn-colour-link-base    : #0070ff;
+  --nn-colour-link-hover   : #ff0033;
+  --nn-colour-em           : #229966;
+  --nn-colour-strong       : #ff0033;
+  --nn-colour-grey-default : #d6d8da;
+  --nn-colour-grey-light   : #f6f8fa;
+  --nn-colour-green-light  : #ddffee;
+  --nn-colour-green-default: #00ddaa;
 }
 
-/* 全ての要素のボックスサイズの計算方法を border-box にする */
 *,
 ::before,
 ::after {
   box-sizing: border-box;
 }
 
-/* ページ全体のスタイルを設定する */
 html {
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Helvetica, YuGothic, "Yu Gothic", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /* 常に縦スクロールバーを表示する */
+  color: var(--nn-colour-base);
+  font-family: var(--nn-font-family-sans-serif);
   overflow-y: scroll;
-  cursor: default;
-  /* Chrome で下線部の文字切れを調整する */
+  overflow-wrap: break-word;
   text-decoration-skip-ink: none;
-  /* iOS でフォントサイズの調整を避ける */
-  -webkit-text-size-adjust: 100%;
-  /* iOS で下線部の文字切れを調整する */
   -webkit-text-decoration-skip: objects;
-  /* iOS で慣性スクロールを有効にする */
-  -webkit-overflow-scrolling: touch;
+  line-height: 1.7;
+  background: var(--nn-colour-background);
+  cursor: default;
 }
 
-/* ページの基準となるスタイルを設定する */
 body {
   margin: 0;
-  line-height: 1.7;
-  overflow-wrap: break-word;
-  /* IE で overflow-wrap が効かないため指定する */
-  word-wrap: break-word;
 }
 
-/* IE でブロック要素として扱われない要素を設定しておく */
-details, main {
-  display: block;
+pre, code, kbd, samp, var, time, textarea {
+  font-family: var(--nn-font-family-monospace);
 }
 
-
-/* ==================================================
- * マージン関連
- * ================================================== */
-
-/* 上下のマージンを設定する */
-h1, h2, h3, h4, h5, h6, p, hr, dl, dt, dd, ol, ul,
-address, details, blockquote, figure, figcaption, fieldset, form, pre, summary, table {
-  margin: 0 0 1rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: calc(var(--nn-space-default) * 2) 0 var(--nn-space-default);
 }
 
-/* 左マージンを追加する */
-dd, li, blockquote, figure {
-  margin-left: 2.5em;
-}
-
-/* 下マージンをなくす : 入れ子のリスト・子要素のマージンと親要素のパディングとの衝突回避 */
-ol ol, ol ul,
-ul ol, ul ul,
-blockquote > :last-child,
-fieldset > :last-child,
-pre > :last-child {
-  margin-bottom: 0;
-}
-
-/* リストの左パディングをなくす */
-ol, ul {
-  padding: 0;
-}
-
-
-/* ==================================================
- * フォント関連
- * ================================================== */
-
-/* 見出しサイズを調整する */
 h1 {
-  font-size: 2em;
+  font-size: 2rem;
 }
 
 h2 {
-  font-size: 1.7em;
+  font-size: 1.7rem;
 }
 
 h3 {
-  font-size: 1.5em;
+  font-size: 1.5rem;
 }
 
 h4 {
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
-/* 見出し5・6は通常サイズ・等幅フォントの要素は IE でフォントサイズが小さくなるのを直す */
-h5, h6,
-code, kbd, samp, var {
-  font-size: 1em;
+h5,
+h6 {
+  font-size: 1rem;
 }
 
-/* 太字にする */
-caption, dt, em, th {
+p, dl, ol, ul,
+blockquote, pre, table, form, details, summary {
+  margin: var(--nn-space-default) 0;
+}
+
+ol, ul {
+  padding-left: var(--nn-space-indent-default);
+}
+
+dd ol, dd ul {
+  padding-left: var(--nn-space-default);
+}
+
+ol ol, ol ul,
+ul ol, ul ul {
+  margin: 0;
+  padding-left: var(--nn-space-default);
+}
+
+dt {
+  margin: var(--nn-space-default) 0 var(--nn-space-tiny);
   font-weight: bold;
 }
 
-/* 斜体にしない */
-address, dfn, em, var {
+dd {
+  margin: 0 0 0 var(--nn-space-indent-default);
+}
+
+dd > :first-child,
+blockquote > :first-child {
+  margin-top: 0;
+}
+
+blockquote > :last-child {
+  margin-bottom: 0;
+}
+
+hr {
+  margin: var(--nn-space-large) 0;
+  border: 0;
+  border-bottom: 1px solid var(--nn-colour-grey-default);
+}
+
+a {
+  color: var(--nn-colour-link-base);
+  text-decoration: underline;
+}
+
+a:hover,
+a:active {
+  color: var(--nn-colour-link-hover);
+}
+
+em {
+  color: var(--nn-colour-em);
+  font-style: normal;
+  font-weight: bold;
+}
+
+a em, em a {
+  color: var(--nn-colour-em);
+  text-decoration: underline;
+}
+
+a:hover em, a:active em, em a:hover, em a:active {
+  color: var(--nn-colour-link-hover);
+}
+
+strong {
+  color: var(--nn-colour-strong);
+}
+
+a strong, strong a {
+  color: var(--nn-colour-strong);
+  text-decoration: underline;
+}
+
+a:hover strong, a:active strong, strong a:hover, strong a:active {
+  color: var(--nn-colour-link-base);
+}
+
+address, var {
   font-style: normal;
 }
 
-/* 等幅フォントにする */
-pre, code, kbd, samp, var, textarea {
-  font-family: MeiryoKe_Gothic, Osaka-mono, "MS Gothic", "Courier New", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-/* フォーム部品のフォントは親要素から継承させる */
-button, input, optgroup, select {
-  /* 要素の余白をなくす */
-  margin: 0;
-  font-family: inherit;
-  font-size: inherit;
-}
-
-/* テキストエリアはフォントサイズのみ親要素から継承させる */
-textarea {
-  margin: 0;
-  font-size: inherit;
-}
-
-/* 注釈のサイズを調整する */
-small {
-  font-size: .8em;
-}
-
-/* 下付き文字・上付き文字のサイズ・位置を調整する */
-sub, sup {
-  position: relative;
-  font-size: .75em;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -.25em;
-}
-
-sup {
-  top: -.5em;
-}
-
-
-/* ==================================================
- * 個別スタイル設定
- * ================================================== */
-
-/* 引用ブロック */
 blockquote {
-  border: 1px solid #0da;
-  border-radius: 4px;
-  padding: 1em;
-  background: #dfe;
+  border: 1px solid var(--nn-colour-green-default);
+  border-radius: var(--nn-border-radius-default);
+  padding: var(--nn-space-default) var(--nn-space-small);
+  background: var(--nn-colour-green-light);
 }
 
-/* 等幅ブロック */
 pre {
-  border: 1px solid #d2d4d6;
-  border-radius: 4px;
-  padding: 1em;
-  background: #f2f4f6;
+  border: 1px solid var(--nn-colour-grey-default);
+  border-radius: var(--nn-border-radius-default);
+  padding: var(--nn-space-small);
+  background: var(--nn-colour-grey-light);
   overflow: auto;
   overflow-wrap: normal;
-  /* IE・Edge 向け */
-  word-wrap: normal;
   word-break: keep-all;
   white-space: pre;
 }
 
-/* テーブル */
-table {
-  border-collapse: collapse;
+code, kbd, samp, var {
+  font-size: 1em;
 }
 
-/* テーブルセル */
-td, th {
-  border: 1px solid #d2d4d6;
-  padding: .25em .5em;
-}
-
-/* テーブル見出し */
-th {
-  text-align: center;
-  background: #f2f4f6;
-}
-
-/* 水平線 */
-hr {
-  border: 0;
-  border-bottom: 1px solid #d2d4d6;
-}
-
-/* フォームグループ */
-fieldset {
-  border: 1px solid #d2d4d6;
-  border-radius: 4px;
-}
-
-/* 図表 */
-figure {
-  border-left: .5em solid #d2d4d6;
-  padding-left: 1em;
-}
-
-/* 要約 */
-summary {
-  cursor: pointer;
-}
-
-/* 略語・定義 */
-abbr[title], dfn[title] {
-  /* IE・Edge 向け */
-  text-decoration: underline;
-  text-decoration: underline dotted;
-  cursor: help;
-}
-
-/* コード */
 :not(pre) > code,
 :not(pre) > samp,
 :not(pre) > kbd,
 :not(pre) > var {
-  margin: 0 .25em;
-  border: 1px solid #d2d4d6;
-  border-radius: 4px;
-  padding: .1em .25em;
-  background: #f2f4f6;
+  margin: 0 calc(var(--nn-space-tiny) / var(--nn-ratio-4));
+  border: 1px solid var(--nn-colour-grey-default);
+  border-radius: var(--nn-border-radius-default);
+  padding: calc(var(--nn-space-tiny) / 6) calc(var(--nn-space-tiny) / var(--nn-ratio-2));
+  font-size: .94em;
+  background: var(--nn-colour-grey-light);
 }
 
-/* 引用 */
+table {
+  border-collapse: collapse;
+}
+
+caption {
+  margin: 0 0 calc(var(--nn-space-tiny) / 2);
+  font-weight: bold;
+}
+
+th, td {
+  border: 1px solid var(--nn-colour-grey-default);
+  padding: calc(var(--nn-space-tiny) / 2) var(--nn-space-tiny);
+}
+
+th {
+  font-weight: bold;
+  text-align: center;
+  background: var(--nn-colour-grey-light);
+}
+
+td {
+  vertical-align: top;
+}
+
 q {
   quotes: "“" "”" "‘" "’";
 }
@@ -268,17 +284,41 @@ q::after {
   content: close-quote;
 }
 
-/* 隣接するテキストを上揃えにする */
-button, input, select, textarea {
+summary {
+  cursor: pointer;
+}
+
+abbr[title], dfn[title] {
+  font-style: normal;
+  text-decoration: underline dotted;
+  cursor: help;
+}
+
+/* フォーム部品のフォントは親要素から継承させる */
+button, input, select {
+  margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  /* 隣接するテキストを上揃えにする */
+  vertical-align: top;
+}
+
+/* テキストエリアはフォントサイズのみ親要素から継承させる */
+textarea {
+  margin: 0;
+  font-size: inherit;
+  /* 隣接するテキストを上揃えにする */
   vertical-align: top;
 }
 
 /* チェックボックスとラジオボタンは隣接するテキストを垂直中央揃えにする */
 [type="checkbox"], [type="radio"] {
   vertical-align: middle;
+  cursor: pointer;
 }
 
-/* Mac でのボタン類の表示仕様を揃える */
 button, [type="button"], [type="reset"], [type="submit"] {
+  /* Mac でのボタン類の表示仕様を揃える */
   -webkit-appearance: button;
+  cursor: pointer;
 }
