--- a/neos-normalize.css
+++ b/neos-normalize.css
@@ -67,7 +67,7 @@
   --nn-colour-link-hover   : #ff0033;
   --nn-colour-em           : #229966;
   --nn-colour-strong       : #ff0033;
-  --nn-colour-grey-default : #d6d8da;
+  --nn-colour-grey-default : #caccce;
   --nn-colour-grey-lighter : #eef0f2;
   --nn-colour-grey-light   : #f6f8fa;
   --nn-colour-green-light  : #ddffee;
