--- a/neos-normalize.css
+++ b/neos-normalize.css
@@ -74,13 +74,13 @@
   --nn-colour-black    : #000000;
   --nn-colour-grey     : #808080;
   --nn-colour-white    : #ffffff;
-  --nn-colour-blue     : #0060f3;
+  --nn-colour-blue     : #0070ff;
   --nn-colour-purple   : #6610f3;
-  --nn-colour-pink     : #ff0077;
+  --nn-colour-pink     : #ff0099;
   --nn-colour-red      : #f60010;
   --nn-colour-orange   : #fd6f00;
   --nn-colour-yellow   : #f6a300;
-  --nn-colour-green    : #008840;
+  --nn-colour-green    : #009940;
   --nn-colour-teal     : #009088;
   --nn-colour-cyan     : #00d0f0;
   
